# rradio

./: .gitignore  Cargo.toml  rds-plan.md  rds_experiment_results.json  rds_grid_results.json  things-to-revisit.md
.cargo/: config.toml
docs/: fir-filter-derivation.md  rds-demod-pipeline.md  rds-demod-v5-architecture.md  rds-experiment-plan.md  rds-pipeline.md  testing-rds.md
py/: biquad_response.py  compute_detector_gains.py  gardner_s_curve.py  playground.py  rds_compare.py  rds_experiment.py  rds_grid_search.py  rds_manchester_rrc.py  rds_matched_filter.py
rradio-dsp/: Cargo.toml
rradio-dsp/src/: buffer.rs  filterable.rs  interleaver.rs  lib.rs  resample.rs  spy.rs
rradio-fm/: Cargo.toml
rradio-fm/src/: chip_sync.rs  main.rs  playback.rs  rds_decoder.rs  rds_demod.rs  rds_error_table.inc  wideband_fm_audio.rs
rradio-sdr/: Cargo.toml
rradio-sdr/src/: lib.rs  pluto.rs  sigmf.rs
src/: agc.rs  biphase.rs  biquad.rs  buffer.rs  chip_sync.rs  costas.rs  deemphasis.rs  fir.rs  fm_demod.rs  gardner_clock_recovery.rs  main.rs  manchester.rs  nco.rs  osc.rs  pi_loop.rs  playback.rs  pll.rs  pluto.rs  polyphase.rs  psk_modem.rs  rds_block_sync.rs  rds_config.rs  rds_demod.rs  rds_demod_v2.rs  rds_taps.rs  resample.rs  sigmf.rs  soapy.rs  spy.rs  symbolsync.rs  symsync.rs  wideband_fm_audio.rs
