[package]
name = "rradio"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
ctrlc = "3.5.0"
hound = "3"
industrial-io = "0.6.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
plotly = "0.13.5"
rustfft = "=6.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soapysdr = "0.4"
